# quadrotor_moveit

./: README.md
action_controller/: CMakeLists.txt  package.xml
action_controller/src/: actionController.cpp
moveit_controller/: CMakeLists.txt  moveit_controller_plugin_description.xml  package.xml
moveit_controller/include/moveit_controller/: action_based_controller_handle.h  follow_joint_trajectory_controller_handle.h  gripper_controller_handle.h  multi_dof_follow_joint_trajectory_handle.h
moveit_controller/src/: moveit_controller.cpp
quadrotor_moveit/: .setup_assistant  CMakeLists.txt  package.xml
quadrotor_moveit/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  quadrotor.srdf
quadrotor_moveit/include/quadrotor_moveit/: quadrotor.h  utils.h
quadrotor_moveit/launch/: controller.launch  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  quadrotor_moveit_controller_manager.launch.xml  quadrotor_moveit_sensor_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup.launch  setup_assistant.launch  start.launch  trajectory_execution.launch.xml  warehouse.launch
quadrotor_moveit/scripts/: moveit_quadrotor.py  pose.sh  quadrotor.py  twist.sh  world.sh
quadrotor_moveit/src/: main.cpp  quadrotor.cpp
