<package>
  <name>action_controller</name>
  <version>1.0.0</version>
  <description>action_controller</description>
  <maintainer email="xxx@xxx.com">Alessio</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/action_controller</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Alessio</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>roslib</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>moveit_msgs</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->

</package>
